Fixed content overflow

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -14,16 +14,20 @@ body {
     flex-direction: column;
     /* height: 100vh; */
     /* height: 100%; */
-    min-height: calc(100vh);
+    min-height: 100vh;
     width: 75%;
     margin: 0 auto;
     background-color: #5057AF;
-    position: relative;
 }
 
 .row {
     margin-left: 0;
     margin-right: 0;
+}
+
+.page-container {
+    position: relative;
+    min-height: 100vh;
 }
 
 /*------------------------------ Navigation bar */
@@ -82,6 +86,8 @@ hr {
     width: 100%;
     height: 100%;
     margin: auto;
+    padding-bottom: 6em;
+
 
 }
 
@@ -126,7 +132,7 @@ hr {
     border-radius: 0.5em;
     height: 5em;
     margin-bottom: 1em;
-    position: relative;
+    position: absolute;
     bottom: 0;
 }
 
@@ -145,10 +151,6 @@ hr {
     height: 12em;
 }
 
-.card-body {
-    height: 4em;
-    margin-bottom: 2em;
-}
 
 /*------------------------------ Workouts Plans Page */
 
@@ -222,6 +224,14 @@ hr {
     background-color: #AFA850;
 
 }
+
+.max-lines-3 {
+    display: block;
+    word-wrap: break-word;
+    overflow: hidden;
+    max-height: 5.4em;
+    line-height: 1.8em;
+  }
 
 
 /*------------------------------ Allauth */
